--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <div class="healthbar">
                 <div
                         class="healthbar text-center"
-                        style="background-color: green; margin: 0; color: white;">
+                        style="background-color: green; margin: 0; color: white;"
+                        :style="{width: playerHealth + '%'}">
                     {{ playerHealth }}
                 </div>
             </div>
@@ -24,7 +25,8 @@
             <div class="healthbar">
                 <div
                         class="healthbar text-center"
-                        style="background-color: green; margin: 0; color: white;">
+                        style="background-color: green; margin: 0; color: white;"
+                        :style="{width: monsterHealth + '%'}">
                     {{ monsterHealth }}
                 </div>
             </div>
