--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </section>
     <section class="row controls" v-else> <!-- v-else doesn't work for div -->
         <div class="small-12 columns">
-            <button id="special-attack">SPECIAL ATTACK</button>
             <button id="heal">HEAL</button>
             <button id="give-up">GIVE UP</button>
             <button id="attack" @click="attack">ATTACK</button>
+            <button id="special-attack" @click="specialAttack">SPECIAL ATTACK</button>
         </div>
     </section>
     <section class="row log">
